public interface IAccionSupervivencia {
    double calcularConsumoRecursos();
    double calcularProbabilidadExito();
    String describirHabilidad();
}
