@startuml
left to right direction
class ListaHabitantes{
    -listaHabitantes: Habitante[]
    -cantActualHab: int
    -cantMaxHab: int
    +ListaHabitante(cantMaxHab: int)
    +agregarHabitante(h: Habitante): boolean
    +obtenerHabitante(pos: int): Habitante
    +buscarHabitantePorRut(rut: String): Habitante
    +buscarHabitantePorUsuario(nombreUsuario: String): Habitante
    +getCantActualHab(): int
    +getListaHabitantes(): Habitante[]
}

ListaHabitantes"1"o--->"0..100"Habitante: posee

abstract class Habitante{
    #rut: String
    #nombre: String
    #apellido: String
    #username: String
    #password: String
    #rango: Enum
    +Habitante(rut: String, nombre: String, apellido: String, username: String,
    password: String, rango: Enum)
    +gets()
    +sets()
}

Explorador"1"---|>"1"Habitante: hereda
Medico"1"---|>"1"Habitante: hereda
Defensor"1"---|>"1"Habitante: hereda

class Explorador{
    -nivelSigilo: int
    +Explorador(rut: String, nombre: String, apellido: String, username: String,
                    password: String, rango: Enum, nivelSigilo: int)
    +gets()
    +sets()
}

class Medico{
    -capacidadMedica: int
    +Medico(rut: String, nombre: String, apellido: String, username: String,
                password: String, rango: Enum, capacidadMedica: int)
    +gets()
    +sets()

}

class Defensor{
    -fuerza: int
    +Defensor(rut: String, nombre: String, apellido: String, username: String,
                  password: String, rango: Enum, fuerza: int)
    +gets()
    +sets()
}

interface IAccionSupervivencia{
    +calcularConsumoRecursos(): double
    +calcularProbabilidadExito(): double
    +describirHabilidad(): String
}
Habitante"1"...|>"1"IAccionSupervivencia: implementa

class ListaNexoMisiones{
    -head: NodoMision
    -cantElementos: int
    +ListaNexoMisiones()
    +agregarInicio(nuevo: Mision): boolean
    +obtener(dato: Mision): NodoMision
    +esVacio(): boolean
    +obtenerPorPosicion(): Mision
    +ordenarMisiones(): void
    +contarMisionesExitosasPorRut(rut: String, rangoActual: String): int
    +getListaMisiones(): Mision[]
    +getCantidadDatos(): int
}
ListaNexoMisiones"1"--->"0..1"NodoMision: tiene

class NodoMision{
    -dato: Mision
    -siguiente: NodoMision
    +NodoMision(dato: Mision)
    +gets()
    +sets()
}
NodoMision"1"--->"1"NodoMision: Siguiente
NodoMision"1"--->"1"Mision: tiene

class Mision{
    -habitante: Habitante
    -suministro: Suministro
    -fecha: String
    -cantidadRecuperada: int
    -resultado: String
    -fechaHoy: LocalDateTime
    -cantidadPerdida: int
    +Mision(habitante: Habitante, idSuministro: int,
     fecha: String, cantidadRecuperada: int, resultado: String, cantidadPerdida: int)
    +gets()
    +sets()
}

class ListaSuministros{
    -listaSuministros: Suministro[]
    -cantActualSum: int
    -cantMaxSum: int
    +ListaSuministros(cantMaxSum: int)
    +agregarSuministro(s: Suministro): boolean
    +buscarSuministro(pos: int): Suministro
    +obtenerSumPorId(id int): Suministro
    +getCantActualSum(): int
    +getListaSuministros(): Suministro[]
}
ListaSuministros"1"o--->"0..100"Suministro: posee

class Suministro{
    -id: int
    -tipo: String
    -descripcion: String
    -peso: double
    -cantidad: int
    -estado: String
    +Suministro(id: int, tipo: String, descripcion: String, peso: double, cantidad: int, estado: String)
    +gets()
    +sets()
}


class SistemaRefugioExodoImpl{
    -listaHabitantes: ListaHabitantes
    -listaSuministros: ListaSuministros
    -listaNexoMisiones: ListaNexoMisiones
    +SistemaRefugioExodoImpl():
}
SistemaRefugioExodoImpl"1"...|>"1"SistemaRefugioExodo: implementa
SistemaRefugioExodoImpl"1"--->"1"ListaNexoMisiones: posee
SistemaRefugioExodoImpl"1"--->"1"ListaSuministros: posee
SistemaRefugioExodoImpl"1"--->"1"ListaHabitantes: posee

interface SistemaRefugioExodo{
    +cargaDeDatos(): String
    +datosCargados(): boolean
    +iniciarSistema(): void
    +iniciarSesion(nombreUsuario: String, contrasenia: String): boolean
    +menuUsuario(nombreUsuario: String): void
    +registrarSuperviviente(): String
    +registrarNuevaMision(usuario: Habitante): String
    +comprobanteMision(Mision m)
    +mostrarSuministroDisponibles(): String
    +consultarHistorial(usuario: Habitante) String
    +subirRango(usuario: Habitante): String
    +administrarInventario(usuario: Habitante): void
    +agregarSuministro(): String
    +cambiarEstado(): String
    +mostrarEstadisticas(): String
    +supervivienteMejorExito(): String
    +suministroMasBuscado(): String
    +subirDatos(): void

}

Enum Rango{
    NOVATO
    VETERANO
    LEYENDA
    +puedeSubirRango(): boolean
    +rangoSiguiente(): Rango
}

Habitante  ..|> Rango
@enduml